--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
 
   </div>
 
+    <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
+    <script src="./niche/nichejavascripts/virtualassistant.js"></script>
+    <script src="./niche/nichejavascripts/datascience.js"></script>
+
   <script>
     (function () {
       const menu = document.getElementById('topmenu');
@@ -302,106 +306,106 @@
         can: "<p>What I can do: list of services or skills.</p>"
       };
 
-      const niches = {
-        "SEO Content Writer":
-          "<p class='niche-heading'>SEO CONTENT WRITER</p>" +
-          "<p>0981-359-0568</p>" +
-          "<p>onbizgladyslacia@gmail.com</p>" +
-          "<p>freelancergladyslacia</p>" +
-          "<p>onbizgladyslacia</p>" +
-          "<p>Upwork: 01496f55ce7a5e12b1</p>" +
-          "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
-          "<p>Calamba, Misamis Occidental, Philippines</p>",
+    //   const niches = {
+    //     "SEO Content Writer":
+    //       "<p class='niche-heading'>SEO CONTENT WRITER</p>" +
+    //       "<p>0981-359-0568</p>" +
+    //       "<p>onbizgladyslacia@gmail.com</p>" +
+    //       "<p>freelancergladyslacia</p>" +
+    //       "<p>onbizgladyslacia</p>" +
+    //       "<p>Upwork: 01496f55ce7a5e12b1</p>" +
+    //       "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
+    //       "<p>Calamba, Misamis Occidental, Philippines</p>",
 
-        "General VA": 
-            "<p class='niche-heading'>VIRTUAL ASSISTANT</p>" +
-            "<p>0981-359-0568</p>" +
-            "<p>onbizgladyslacia@gmail.com</p>" +
-            "<p>freelancergladyslacia</p>" +
-            "<p>onbizgladyslacia</p>" +
-            "<p>Upwork: 01496f55ce7a5e12b1</p>" +
-            "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
-            "<p>Calamba, Misamis Occidental, Philippines</p>",
+    //     "General VA": 
+    //         "<p class='niche-heading'>VIRTUAL ASSISTANT</p>" +
+    //         "<p>0981-359-0568</p>" +
+    //         "<p>onbizgladyslacia@gmail.com</p>" +
+    //         "<p>freelancergladyslacia</p>" +
+    //         "<p>onbizgladyslacia</p>" +
+    //         "<p>Upwork: 01496f55ce7a5e12b1</p>" +
+    //         "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
+    //         "<p>Calamba, Misamis Occidental, Philippines</p>",
 
-        "Data Analyst": 
-            "<p class='niche-heading'>SALES DATA ANALYST</p>" +
-            "<p>0981-359-0568</p>" +
-            "<p>onbizgladyslacia@gmail.com</p>" +
-            "<p>freelancergladyslacia</p>" +
-            "<p>onbizgladyslacia</p>" +
-            "<p>Upwork: 01496f55ce7a5e12b1</p>" +
-            "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
-            "<p>Calamba, Misamis Occidental, Philippines</p>"
-      };
+    //     "Data Analyst": 
+    //         "<p class='niche-heading'>SALES DATA ANALYST</p>" +
+    //         "<p>0981-359-0568</p>" +
+    //         "<p>onbizgladyslacia@gmail.com</p>" +
+    //         "<p>freelancergladyslacia</p>" +
+    //         "<p>onbizgladyslacia</p>" +
+    //         "<p>Upwork: 01496f55ce7a5e12b1</p>" +
+    //         "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
+    //         "<p>Calamba, Misamis Occidental, Philippines</p>"
+    //   };
 
-      const seocontentwriter =
-        "<h2>PROFESSIONAL SUMMARY</h2>" +
-        "<p>Lorem ipsum</p>" +
+    //   const seocontentwriter =
+    //     "<h2>PROFESSIONAL SUMMARY</h2>" +
+    //     "<p>Lorem ipsum</p>" +
 
-        "<h2>WORK EXPERIENCE & PROJECTS</h2>" +
+    //     "<h2>WORK EXPERIENCE & PROJECTS</h2>" +
 
-        "<p class='job-title'>Job Title</p>" +
-        "<p class='company-line'>Company, Year</p>" +
-        "<ul>" +
-          "<li>Bullet item</li>" +
-          "<li>Bullet item</li>" +
-          "<li>Bullet item</li>" +
-        "</ul>" +
-        "<p class='projects'>Projects:</p>" +
-        "<ol>" +
-          "<li>Project item</li>" +
-          "<li>Project item</li>" +
-        "</ol>" +
+    //     "<p class='job-title'>Job Title</p>" +
+    //     "<p class='company-line'>Company, Year</p>" +
+    //     "<ul>" +
+    //       "<li>Bullet item</li>" +
+    //       "<li>Bullet item</li>" +
+    //       "<li>Bullet item</li>" +
+    //     "</ul>" +
+    //     "<p class='projects'>Projects:</p>" +
+    //     "<ol>" +
+    //       "<li>Project item</li>" +
+    //       "<li>Project item</li>" +
+    //     "</ol>" +
 
-        "<p class='job-title'>Job Title</p>" +
-        "<p class='company-line'>Company, Year</p>" +
-        "<ul>" +
-          "<li>Bullet item</li>" +
-          "<li>Bullet item</li>" +
-        "</ul>" +
-        "<p class='projects'>Projects:</p>" +
-        "<ol>" +
-          "<li>Project item</li>" +
-          "<li>Project item</li>" +
-        "</ol>" +
+    //     "<p class='job-title'>Job Title</p>" +
+    //     "<p class='company-line'>Company, Year</p>" +
+    //     "<ul>" +
+    //       "<li>Bullet item</li>" +
+    //       "<li>Bullet item</li>" +
+    //     "</ul>" +
+    //     "<p class='projects'>Projects:</p>" +
+    //     "<ol>" +
+    //       "<li>Project item</li>" +
+    //       "<li>Project item</li>" +
+    //     "</ol>" +
 
-        "<h2>CERTIFICATIONS & TRAININGS</h2>" +
-        "<ul>" +
-          "<li>Certification 1</li>" +
-          "<li>Certification 2</li>" +
-          "<li>Certification 3</li>" +
-        "</ul>" +
+    //     "<h2>CERTIFICATIONS & TRAININGS</h2>" +
+    //     "<ul>" +
+    //       "<li>Certification 1</li>" +
+    //       "<li>Certification 2</li>" +
+    //       "<li>Certification 3</li>" +
+    //     "</ul>" +
 
-        "<h2>EDUCATION</h2>" +
-        "<ul>" +
-          "<li>Education item</li>" +
-        "</ul>" +
+    //     "<h2>EDUCATION</h2>" +
+    //     "<ul>" +
+    //       "<li>Education item</li>" +
+    //     "</ul>" +
 
-        "<h2>SKILLS, EXPERTISE & TOOLS</h2>" +
+    //     "<h2>SKILLS, EXPERTISE & TOOLS</h2>" +
 
-        "<h3>Soft Skills</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>" +
+    //     "<h3>Soft Skills</h3>" +
+    //     "<ul>" +
+    //       "<li>Lorem ipsum</li>" +
+    //       "<li>Lorem ipsum</li>" +
+    //     "</ul>" +
 
-        "<h3>Technical Skills</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>" +
+    //     "<h3>Technical Skills</h3>" +
+    //     "<ul>" +
+    //       "<li>Lorem ipsum</li>" +
+    //       "<li>Lorem ipsum</li>" +
+    //     "</ul>" +
 
-        "<h3>Tools</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>" +
+    //     "<h3>Tools</h3>" +
+    //     "<ul>" +
+    //       "<li>Lorem ipsum</li>" +
+    //       "<li>Lorem ipsum</li>" +
+    //     "</ul>" +
 
-        "<h3>Languages</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>";
+    //     "<h3>Languages</h3>" +
+    //     "<ul>" +
+    //       "<li>Lorem ipsum</li>" +
+    //       "<li>Lorem ipsum</li>" +
+    //     "</ul>";
 
       function menubuttons() {
         return Array.prototype.slice.call(document.querySelectorAll('.menu-btn'));
@@ -448,12 +452,16 @@
       detailsContent.addEventListener('click', function(e){
         if (e.target.matches('.niche-btn')) {
           const name = e.target.textContent.trim();
-          detailsContent.innerHTML = niches[name] || "<p>" + name + "</p>";
+          detailsContent.innerHTML = (window.niches && window.niches[name]) || "<p>" + name + "</p>";
+        //   detailsContent.innerHTML = niches[name] || "<p>" + name + "</p>";
 
           if (name === "SEO Content Writer") {
-            contentwriter.innerHTML = seocontentwriter;
+            contentwriter.innerHTML = window.seocontentwriter || "";
             contentwriter.style.display = 'block';
             contentwriter.scrollIntoView({ behavior: 'smooth' });
+            // contentwriter.innerHTML = seocontentwriter;
+            // contentwriter.style.display = 'block';
+            // contentwriter.scrollIntoView({ behavior: 'smooth' });
           } else {
             hidewriter();
           }
