--- a/testruns/index1.html
+++ b/testruns/index1.html
@@ -177,7 +177,7 @@
     line-height: 1 !important;
     }
 
-    #niche-contentwriter p {
+    #resume p {
     margin: 0 !important;
     padding: 0 !important;
     line-height: 1 !important;
@@ -194,7 +194,7 @@
     transition: font-variation-settings var(--scale-ease) ease, font-weight var(--scale-ease) ease;
     }
 
-    #niche-contentwriter {
+    #resume {
       display: none;
       margin-top: 18px;
       font-family: var(--font-stack);
@@ -270,9 +270,13 @@
       </div>
     </div>
 
-    <div id="niche-contentwriter"></div>
+    <div id="resume"></div>
 
   </div>
+
+    <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
+    <script src="./niche/nichejavascripts/virtualassistant.js"></script>
+    <script src="./niche/nichejavascripts/datascience.js"></script>
 
   <script>
     (function () {
@@ -281,7 +285,7 @@
       const original = detailsContent.innerHTML;
       const originalButtons = menu.innerHTML;
 
-      const contentwriter = document.getElementById('niche-contentwriter');
+      const resumecontent = document.getElementById('resume');
 
       const niche = [
         "SEO Content Writer",
@@ -302,107 +306,6 @@
         can: "<p>What I can do: list of services or skills.</p>"
       };
 
-      const niches = {
-        "SEO Content Writer":
-          "<p class='niche-heading'>SEO CONTENT WRITER</p>" +
-          "<p>0981-359-0568</p>" +
-          "<p>onbizgladyslacia@gmail.com</p>" +
-          "<p>freelancergladyslacia</p>" +
-          "<p>onbizgladyslacia</p>" +
-          "<p>Upwork: 01496f55ce7a5e12b1</p>" +
-          "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
-          "<p>Calamba, Misamis Occidental, Philippines</p>",
-
-        "General VA": 
-            "<p class='niche-heading'>VIRTUAL ASSISTANT</p>" +
-            "<p>0981-359-0568</p>" +
-            "<p>onbizgladyslacia@gmail.com</p>" +
-            "<p>freelancergladyslacia</p>" +
-            "<p>onbizgladyslacia</p>" +
-            "<p>Upwork: 01496f55ce7a5e12b1</p>" +
-            "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
-            "<p>Calamba, Misamis Occidental, Philippines</p>",
-
-        "Data Analyst": 
-            "<p class='niche-heading'>SALES DATA ANALYST</p>" +
-            "<p>0981-359-0568</p>" +
-            "<p>onbizgladyslacia@gmail.com</p>" +
-            "<p>freelancergladyslacia</p>" +
-            "<p>onbizgladyslacia</p>" +
-            "<p>Upwork: 01496f55ce7a5e12b1</p>" +
-            "<p>OLJ: 3977015 (OnlineJobs.ph)</p>" +
-            "<p>Calamba, Misamis Occidental, Philippines</p>"
-      };
-
-      const seocontentwriter =
-        "<h2>PROFESSIONAL SUMMARY</h2>" +
-        "<p>Lorem ipsum</p>" +
-
-        "<h2>WORK EXPERIENCE & PROJECTS</h2>" +
-
-        "<p class='job-title'>Job Title</p>" +
-        "<p class='company-line'>Company, Year</p>" +
-        "<ul>" +
-          "<li>Bullet item</li>" +
-          "<li>Bullet item</li>" +
-          "<li>Bullet item</li>" +
-        "</ul>" +
-        "<p class='projects'>Projects:</p>" +
-        "<ol>" +
-          "<li>Project item</li>" +
-          "<li>Project item</li>" +
-        "</ol>" +
-
-        "<p class='job-title'>Job Title</p>" +
-        "<p class='company-line'>Company, Year</p>" +
-        "<ul>" +
-          "<li>Bullet item</li>" +
-          "<li>Bullet item</li>" +
-        "</ul>" +
-        "<p class='projects'>Projects:</p>" +
-        "<ol>" +
-          "<li>Project item</li>" +
-          "<li>Project item</li>" +
-        "</ol>" +
-
-        "<h2>CERTIFICATIONS & TRAININGS</h2>" +
-        "<ul>" +
-          "<li>Certification 1</li>" +
-          "<li>Certification 2</li>" +
-          "<li>Certification 3</li>" +
-        "</ul>" +
-
-        "<h2>EDUCATION</h2>" +
-        "<ul>" +
-          "<li>Education item</li>" +
-        "</ul>" +
-
-        "<h2>SKILLS, EXPERTISE & TOOLS</h2>" +
-
-        "<h3>Soft Skills</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>" +
-
-        "<h3>Technical Skills</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>" +
-
-        "<h3>Tools</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>" +
-
-        "<h3>Languages</h3>" +
-        "<ul>" +
-          "<li>Lorem ipsum</li>" +
-          "<li>Lorem ipsum</li>" +
-        "</ul>";
-
       function menubuttons() {
         return Array.prototype.slice.call(document.querySelectorAll('.menu-btn'));
       }
@@ -413,16 +316,16 @@
         });
       }
 
-      function hidewriter() {
-        contentwriter.style.display = 'none';
-        contentwriter.innerHTML = "";
+      function hideresume() {
+        resumecontent.style.display = 'none';
+        resumecontent.innerHTML = "";
       }
 
       function clickmenu(e) {
         const key = e.currentTarget.dataset.key;
         activemenu(e.currentTarget);
         detailsContent.innerHTML = contentMap[key] || original;
-        hidewriter();
+        hideresume();
         addhomebutton();
       }
 
@@ -436,7 +339,7 @@
           home.addEventListener('click', function () {
             menu.innerHTML = originalButtons;
             detailsContent.innerHTML = original;
-            hidewriter();
+            hideresume();
             menuactions();
           });
 
@@ -448,15 +351,27 @@
       detailsContent.addEventListener('click', function(e){
         if (e.target.matches('.niche-btn')) {
           const name = e.target.textContent.trim();
-          detailsContent.innerHTML = niches[name] || "<p>" + name + "</p>";
+          detailsContent.innerHTML = (window.niches && window.niches[name]) || "<p>" + name + "</p>";
 
-          if (name === "SEO Content Writer") {
-            contentwriter.innerHTML = seocontentwriter;
-            contentwriter.style.display = 'block';
-            contentwriter.scrollIntoView({ behavior: 'smooth' });
-          } else {
-            hidewriter();
-          }
+        if (name === "SEO Content Writer") {
+            resumecontent.innerHTML = window.seocontentwriter || "";
+            resumecontent.style.display = 'block';
+        }
+
+        else if (name === "General VA") {
+            resumecontent.innerHTML = window.virtualassistant || "";
+            resumecontent.style.display = 'block';
+        }
+
+        else if (name === "Data Analyst") {
+            resumecontent.innerHTML = window.datascience || "";
+            resumecontent.style.display = 'block';
+        } else {
+            hideresume();
+        }
+
+        resumecontent.scrollIntoView({ behavior: 'smooth' });
+
         }
       });
 
