--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..72,300..800&display=swap" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="https://gladyslacia.github.io/assets/favicongdlcgithubio.png" />
+  <link rel="icon" type="image/png" href="./assets/favicongdlcgithubio.png" />
 
   <style>
     :root {
@@ -171,7 +171,7 @@
       font-variation-settings: "wght" 700, "opsz" 24;
     }
 
-    #details-content p {
+    #details p {
     margin: 0 !important;
     padding: 0 !important;
     line-height: 1 !important;
@@ -256,12 +256,12 @@
 
   <div class="container">
     <div class="profile">
-      <img src="https://gladyslacia.github.io/assets/profilepicture1.jpg" alt="Gladys Lacia">
+      <img src="./assets/profilepicture1.jpg" alt="Gladys Lacia">
 
       <div class="details">
         <h1>GLADYS LACIA</h1>
 
-        <div id="details-content">
+        <div id="details">
           <p>Freelancer — SEO Content Writer / Virtual Assistant / Sales Data Analyst / Teacher</p>
           <p>onbizgladyslacia@gmail.com</p>
           <p>Upwork: 01496f55ce7a5e12b1</p>
@@ -279,110 +279,111 @@
     <script src="./niche/nichejavascripts/datascience.js"></script>
 
   <script>
-    (function () {
-      const menu = document.getElementById('topmenu');
-      const detailsContent = document.getElementById('details-content');
-      const original = detailsContent.innerHTML;
-      const originalButtons = menu.innerHTML;
+  (function () {
+    const menu = document.getElementById('topmenu');
+    const vardetails = document.getElementById('details');
+    const original = vardetails.innerHTML;        
+    const resumecontent = document.getElementById('resume');
 
-      const resumecontent = document.getElementById('resume');
+    const niche = [
+      "SEO Content Writer",
+      "General VA",
+      "Data Analyst"
+    ];
 
-      const niche = [
-        "SEO Content Writer",
-        "General VA",
-        "Data Analyst"
-      ];
+    const target = {
+      who:
+        niche
+          .map(function(item){
+            return "<p><button class='niche-btn'>" + item + "</button></p>";
+          })
+          .join(""),
 
-      const contentMap = {
-        who:
-          niche
-            .map(function(item){
-              return "<p><button class='niche-btn'>" + item + "</button></p>";
-            })
-            .join(""),
+      done: "<p>Projects and accomplishments go here.</p>",
+      learned: "<p>Skills and learning highlights go here.</p>",
+      can: "<p>What I can do: list of services or skills.</p>"
+    };
 
-        done: "<p>Projects and accomplishments go here.</p>",
-        learned: "<p>Skills and learning highlights go here.</p>",
-        can: "<p>What I can do: list of services or skills.</p>"
-      };
+    function menubuttons() {
+      return Array.prototype.slice.call(menu.querySelectorAll('.menu-btn[data-key]'));
+    }
 
-      function menubuttons() {
-        return Array.prototype.slice.call(document.querySelectorAll('.menu-btn'));
-      }
+    function activemenu(btn) {
+      menubuttons().forEach(function(b){
+        b.classList.toggle('active', b === btn);
+      });
+    }
 
-      function activemenu(btn) {
-        menubuttons().forEach(function(b){
-          b.classList.toggle('active', b === btn);
-        });
-      }
+    function hideresume() {
+      resumecontent.style.display = 'none';
+      resumecontent.innerHTML = "";
+    }
 
-      function hideresume() {
-        resumecontent.style.display = 'none';
-        resumecontent.innerHTML = "";
-      }
+    function addhomebutton() {
+      if (document.getElementById('home-btn')) return;
 
-      function clickmenu(e) {
-        const key = e.currentTarget.dataset.key;
-        activemenu(e.currentTarget);
-        detailsContent.innerHTML = contentMap[key] || original;
+      const home = document.createElement('button');
+      home.id = 'home-btn';
+      home.className = 'menu-btn';
+      home.textContent = 'Home';
+
+      home.addEventListener('click', function () {
+        vardetails.innerHTML = original;
         hideresume();
-        addhomebutton();
-      }
 
-      function addhomebutton() {
-        if (!document.getElementById('home-btn')) {
-          const home = document.createElement('button');
-          home.id = 'home-btn';
-          home.className = 'menu-btn';
-          home.textContent = 'Home';
+        menubuttons().forEach(function(b){
+          b.classList.remove('active');
+        });
 
-          home.addEventListener('click', function () {
-            menu.innerHTML = originalButtons;
-            detailsContent.innerHTML = original;
-            hideresume();
-            menuactions();
-          });
+        const existingHome = document.getElementById('home-btn');
+        if (existingHome) existingHome.remove();
+      });
 
-          menu.prepend(home);
-          menuactions();
-        }
-      }
+      menu.prepend(home);
+    }
 
-      detailsContent.addEventListener('click', function(e){
-        if (e.target.matches('.niche-btn')) {
-          const name = e.target.textContent.trim();
-          detailsContent.innerHTML = (window.niches && window.niches[name]) || "<p>" + name + "</p>";
+    function clickmenu(e) {
+      const key = e.currentTarget.dataset.key;
+      if (!key) return;
+
+      activemenu(e.currentTarget);
+      vardetails.innerHTML = target[key] || original;
+      hideresume();
+
+      addhomebutton();
+    }
+
+    function menuactions() {
+      menubuttons().forEach(function(btn){
+        btn.removeEventListener('click', clickmenu);
+        btn.addEventListener('click', clickmenu);
+      });
+    }
+
+    vardetails.addEventListener('click', function(e){
+      if (e.target.matches('.niche-btn')) {
+        const name = e.target.textContent.trim();
+        vardetails.innerHTML = (window.niches && window.niches[name]) || "<p>" + name + "</p>";
 
         if (name === "SEO Content Writer") {
-            resumecontent.innerHTML = window.seocontentwriter || "";
-            resumecontent.style.display = 'block';
-        }
-
-        else if (name === "General VA") {
-            resumecontent.innerHTML = window.virtualassistant || "";
-            resumecontent.style.display = 'block';
-        }
-
-        else if (name === "Data Analyst") {
-            resumecontent.innerHTML = window.datascience || "";
-            resumecontent.style.display = 'block';
+          resumecontent.innerHTML = window.seocontentwriter || "";
+          resumecontent.style.display = 'block';
+        } else if (name === "General VA") {
+          resumecontent.innerHTML = window.virtualassistant || "";
+          resumecontent.style.display = 'block';
+        } else if (name === "Data Analyst") {
+          resumecontent.innerHTML = window.datascience || "";
+          resumecontent.style.display = 'block';
         } else {
-            hideresume();
+          hideresume();
         }
 
         resumecontent.scrollIntoView({ behavior: 'smooth' });
-
-        }
-      });
-
-      function menuactions() {
-        menubuttons().forEach(function(btn){
-          btn.addEventListener('click', clickmenu);
-        });
       }
+    });
 
-      menuactions();
-    })();
+    menuactions();
+  })();
   </script>
 
 </body>
