--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
     <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
     <script src="./niche/nichejavascripts/virtualassistant.js"></script>
     <script src="./niche/nichejavascripts/datascience.js"></script>
+    <script src="./niche/projects.js"></script>
 
   <script>
   (function () {
