--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 
   </div>
 
+    <script src="./assets/settings.js"></script>
     <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
     <script src="./niche/nichejavascripts/virtualassistant.js"></script>
     <script src="./niche/nichejavascripts/datascience.js"></script>
