--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <h1>GLADYS LACIA</h1>
 
         <div id="details">
-          <p>Freelancer — SEO Content Writer / Virtual Assistant / Sales Data Analyst / Teacher</p>
+          <p>Freelancer &mdash; SEO Content Writer / Virtual Assistant / Sales Data Analyst / Teacher</p>
           <p>onbizgladyslacia@gmail.com</p>
           <p>Upwork: 01496f55ce7a5e12b1</p>
           <p>OLJ: 3977015 (OnlineJobs.ph)</p>
