--- a/testruns/index1.html
+++ b/testruns/index1.html
@@ -262,7 +262,7 @@
         <h1>GLADYS LACIA</h1>
 
         <div id="details">
-          <p>Freelancer — SEO Content Writer / Virtual Assistant / Sales Data Analyst / Teacher</p>
+          <p>Freelancer &mdash; SEO Content Writer / Virtual Assistant / Sales Data Analyst / Teacher</p>
           <p>onbizgladyslacia@gmail.com</p>
           <p>Upwork: 01496f55ce7a5e12b1</p>
           <p>OLJ: 3977015 (OnlineJobs.ph)</p>
@@ -274,9 +274,11 @@
 
   </div>
 
+    <script src="./assets/settings.js"></script>
     <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
     <script src="./niche/nichejavascripts/virtualassistant.js"></script>
     <script src="./niche/nichejavascripts/datascience.js"></script>
+    <script src="./niche/projects.js"></script>
 
   <script>
   (function () {
