--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
   </div>
 
     <script src="./assets/settings.js"></script>
+    <script src="./niche/home.js"></script>
     <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
     <script src="./niche/nichejavascripts/virtualassistant.js"></script>
     <script src="./niche/nichejavascripts/datascience.js"></script>
