--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
     line-height: 1 !important;
     }
 
+    /* to be fixed */
+    #home p {
+    margin: 0 !important;
+    padding: 0 !important;
+    line-height: 1 !important;
+    }
+
     .niche-heading {
     font-size: var(--h2);
     font-weight: 700;
@@ -195,6 +202,14 @@
     }
 
     #resume {
+      display: none;
+      margin-top: 18px;
+      font-family: var(--font-stack);
+      font-variation-settings: "wght" 400, "opsz" 14;
+    }
+
+    /* to be fixed */
+    #home {
       display: none;
       margin-top: 18px;
       font-family: var(--font-stack);
@@ -271,21 +286,26 @@
     </div>
 
     <div id="resume"></div>
+    <!-- to be fixed -->
+    <div id="home"></div>
 
   </div>
 
     <script src="./assets/settings.js"></script>
+    <script src="./niche/home.js"></script>
     <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
     <script src="./niche/nichejavascripts/virtualassistant.js"></script>
     <script src="./niche/nichejavascripts/datascience.js"></script>
     <script src="./niche/projects.js"></script>
 
-  <script>
+  <!-- <script>
   (function () {
     const menu = document.getElementById('topmenu');
     const vardetails = document.getElementById('details');
     const original = vardetails.innerHTML;        
     const resumecontent = document.getElementById('resume');
+    // to be fixed
+    const homecontent = document.getElementById('home');
 
     const niche = window.setniches;
 
@@ -382,7 +402,151 @@
 
     menuactions();
   })();
-  </script>
+  </script> -->
+
+<script>
+(function () {
+  const menu = document.getElementById('topmenu');
+  const vardetails = document.getElementById('details');
+  const original = vardetails.innerHTML;
+  const resumecontent = document.getElementById('resume');
+  const homecontent = document.getElementById('home'); // <-- use home div
+
+  const niche = window.setniches;
+
+  const target = {
+    who:
+      niche
+        .map(function(item){
+          return "<p><button class='niche-btn'>" + item + "</button></p>";
+        })
+        .join(""),
+
+    done: "<p>Projects and accomplishments go here.</p>",
+    learned: "<p>Skills and learning highlights go here.</p>",
+    can: "<p>What I can do: list of services or skills.</p>"
+  };
+
+  function menubuttons() {
+    return Array.prototype.slice.call(menu.querySelectorAll('.menu-btn[data-key]'));
+  }
+
+  function activemenu(btn) {
+    menubuttons().forEach(function(b){
+      b.classList.toggle('active', b === btn);
+    });
+  }
+
+  function hideResume() {
+    resumecontent.style.display = 'none';
+    resumecontent.innerHTML = "";
+  }
+
+  function hideHome() {
+    if (!homecontent) return;
+    homecontent.style.display = 'none';
+    // keep the html so it can be re-shown, or clear if you prefer:
+    // homecontent.innerHTML = "";
+  }
+
+  function addhomebutton() {
+    if (document.getElementById('home-btn')) return;
+
+    const home = document.createElement('button');
+    home.id = 'home-btn';
+    home.className = 'menu-btn';
+    home.textContent = 'Home';
+
+    home.addEventListener('click', function () {
+      // restore details
+      vardetails.innerHTML = original;
+
+      // hide resume
+      hideResume();
+
+      // show home (populate with window.homeContent if provided)
+      if (homecontent) {
+        homecontent.innerHTML = window.homeContent || "";
+        homecontent.style.display = 'block';
+      }
+
+      menubuttons().forEach(function(b){
+        b.classList.remove('active');
+      });
+
+      const existingHome = document.getElementById('home-btn');
+      if (existingHome) existingHome.remove();
+    });
+
+    menu.prepend(home);
+  }
+
+  function clickmenu(e) {
+    const key = e.currentTarget.dataset.key;
+    if (!key) return;
+
+    activemenu(e.currentTarget);
+
+    // hide home and resume when viewing a menu section
+    hideHome();
+    hideResume();
+
+    vardetails.innerHTML = target[key] || original;
+
+    addhomebutton();
+  }
+
+  function menuactions() {
+    menubuttons().forEach(function(btn){
+      btn.removeEventListener('click', clickmenu);
+      btn.addEventListener('click', clickmenu);
+    });
+  }
+
+  vardetails.addEventListener('click', function(e){
+    if (e.target.matches('.niche-btn')) {
+      const name = e.target.textContent.trim();
+      vardetails.innerHTML = (window.niches && window.niches[name]) || "<p>" + name + "</p>";
+
+      // hide home when showing a niche resume
+      hideHome();
+
+      if (name === "SEO Content Writer") {
+        resumecontent.innerHTML = window.seocontentwriter || "";
+        resumecontent.style.display = 'block';
+      } else if (name === "General VA") {
+        resumecontent.innerHTML = window.virtualassistant || "";
+        resumecontent.style.display = 'block';
+      } else if (name === "Data Analyst") {
+        resumecontent.innerHTML = window.datascience || "";
+        resumecontent.style.display = 'block';
+      } else {
+        hideResume();
+      }
+
+      resumecontent.scrollIntoView({ behavior: 'smooth' });
+    }
+  });
+
+  // when the page loads, optionally show home by default if you want:
+  // if (homecontent) { homecontent.innerHTML = window.homeContent || ""; homecontent.style.display = 'block'; addhomebutton(); }
+
+  menuactions();
+
+  // If we have a home div, populate it and show it immediately.
+  if (homecontent) {
+    // populate from niche/home.js if available
+    if (typeof window.homeContent === 'string' && window.homeContent.trim() !== '') {
+      homecontent.innerHTML = window.homeContent;
+    }
+    // make sure it is visible
+    homecontent.style.display = 'block';
+
+    // ensure Home button exists so user can return to "home" view after clicking other menus
+    // addhomebutton();
+  }
+})();
+</script>
 
 </body>
 </html>
