--- a/testruns/index1.html
+++ b/testruns/index1.html
@@ -287,11 +287,7 @@
     const original = vardetails.innerHTML;        
     const resumecontent = document.getElementById('resume');
 
-    const niche = [
-      "SEO Content Writer",
-      "General VA",
-      "Data Analyst"
-    ];
+    const niche = window.setniches;
 
     const target = {
       who:
