--- a/index.html
+++ b/index.html
@@ -468,6 +468,17 @@
       if (homecontent) {
         homecontent.innerHTML = window.homeContent || "";
         homecontent.style.display = 'block';
+        // homeprojects
+        // setTimeout(showprojects, 0);
+
+        // setTimeout(function() {
+        //   const block = document.getElementById('projects-page');
+        //   const container = document.getElementById('home-projects-list');
+        //   if (block && container) {
+        //     container.appendChild(block);
+        //   }
+        // }, 20);
+
       }
 
       menubuttons().forEach(function(b){
