--- a/index.html
+++ b/index.html
@@ -298,112 +298,6 @@
     <script src="./niche/nichejavascripts/datascience.js"></script>
     <script src="./niche/projects.js"></script>
 
-  <!-- <script>
-  (function () {
-    const menu = document.getElementById('topmenu');
-    const vardetails = document.getElementById('details');
-    const original = vardetails.innerHTML;        
-    const resumecontent = document.getElementById('resume');
-    // to be fixed
-    const homecontent = document.getElementById('home');
-
-    const niche = window.setniches;
-
-    const target = {
-      who:
-        niche
-          .map(function(item){
-            return "<p><button class='niche-btn'>" + item + "</button></p>";
-          })
-          .join(""),
-
-      done: "<p>Projects and accomplishments go here.</p>",
-      learned: "<p>Skills and learning highlights go here.</p>",
-      can: "<p>What I can do: list of services or skills.</p>"
-    };
-
-    function menubuttons() {
-      return Array.prototype.slice.call(menu.querySelectorAll('.menu-btn[data-key]'));
-    }
-
-    function activemenu(btn) {
-      menubuttons().forEach(function(b){
-        b.classList.toggle('active', b === btn);
-      });
-    }
-
-    function hideresume() {
-      resumecontent.style.display = 'none';
-      resumecontent.innerHTML = "";
-    }
-
-    function addhomebutton() {
-      if (document.getElementById('home-btn')) return;
-
-      const home = document.createElement('button');
-      home.id = 'home-btn';
-      home.className = 'menu-btn';
-      home.textContent = 'Home';
-
-      home.addEventListener('click', function () {
-        vardetails.innerHTML = original;
-        hideresume();
-
-        menubuttons().forEach(function(b){
-          b.classList.remove('active');
-        });
-
-        const existingHome = document.getElementById('home-btn');
-        if (existingHome) existingHome.remove();
-      });
-
-      menu.prepend(home);
-    }
-
-    function clickmenu(e) {
-      const key = e.currentTarget.dataset.key;
-      if (!key) return;
-
-      activemenu(e.currentTarget);
-      vardetails.innerHTML = target[key] || original;
-      hideresume();
-
-      addhomebutton();
-    }
-
-    function menuactions() {
-      menubuttons().forEach(function(btn){
-        btn.removeEventListener('click', clickmenu);
-        btn.addEventListener('click', clickmenu);
-      });
-    }
-
-    vardetails.addEventListener('click', function(e){
-      if (e.target.matches('.niche-btn')) {
-        const name = e.target.textContent.trim();
-        vardetails.innerHTML = (window.niches && window.niches[name]) || "<p>" + name + "</p>";
-
-        if (name === "SEO Content Writer") {
-          resumecontent.innerHTML = window.seocontentwriter || "";
-          resumecontent.style.display = 'block';
-        } else if (name === "General VA") {
-          resumecontent.innerHTML = window.virtualassistant || "";
-          resumecontent.style.display = 'block';
-        } else if (name === "Data Analyst") {
-          resumecontent.innerHTML = window.datascience || "";
-          resumecontent.style.display = 'block';
-        } else {
-          hideresume();
-        }
-
-        resumecontent.scrollIntoView({ behavior: 'smooth' });
-      }
-    });
-
-    menuactions();
-  })();
-  </script> -->
-
 <script>
 (function () {
   const menu = document.getElementById('topmenu');
@@ -469,15 +363,14 @@
         homecontent.innerHTML = window.homeContent || "";
         homecontent.style.display = 'block';
         // homeprojects
-        // setTimeout(showprojects, 0);
-
-        // setTimeout(function() {
-        //   const block = document.getElementById('projects-page');
-        //   const container = document.getElementById('home-projects-list');
-        //   if (block && container) {
-        //     container.appendChild(block);
-        //   }
-        // }, 20);
+        // NEW: populate the home projects list from the same sources
+        if (typeof window.populateHomeProjectsFromSources === 'function') {
+          // give the DOM a tiny tick to ensure the #home-projects-list exists
+          // (setTimeout with 0ms ensures synchronous insertion has completed)
+          setTimeout(function () {
+            window.populateHomeProjectsFromSources();
+          }, 0);
+        }
 
       }
 
