--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
     <script src="./niche/nichejavascripts/virtualassistant.js"></script>
     <script src="./niche/nichejavascripts/datascience.js"></script>
     <script src="./niche/projects.js"></script>
+    <script src="./niche/trainings.js"></script>
 
 <script>
 (function () {
