--- a/index.html
+++ b/index.html
@@ -360,20 +360,40 @@
       hideResume();
 
       // show home (populate with window.homeContent if provided)
+      // if (homecontent) {
+      //   homecontent.innerHTML = window.homeContent || "";
+      //   homecontent.style.display = 'block';
+      //   // homeprojects
+      //   // NEW: populate the home projects list from the same sources
+      //   if (typeof window.populateHomeProjectsFromSources === 'function') {
+      //     // give the DOM a tiny tick to ensure the #home-projects-list exists
+      //     // (setTimeout with 0ms ensures synchronous insertion has completed)
+      //     setTimeout(function () {
+      //       window.populateHomeProjectsFromSources();
+      //     }, 0);
+      //   }
+
+      // }
       if (homecontent) {
         homecontent.innerHTML = window.homeContent || "";
         homecontent.style.display = 'block';
-        // homeprojects
-        // NEW: populate the home projects list from the same sources
+
+        // populate the home projects list if the helper exists
         if (typeof window.populateHomeProjectsFromSources === 'function') {
-          // give the DOM a tiny tick to ensure the #home-projects-list exists
-          // (setTimeout with 0ms ensures synchronous insertion has completed)
           setTimeout(function () {
             window.populateHomeProjectsFromSources();
           }, 0);
         }
 
+        // populate the home trainings list if the helper exists
+        // trainings.js should expose window.populateTrainingsFromSources()
+        if (typeof window.populateTrainingsFromSources === 'function') {
+          setTimeout(function () {
+            window.populateTrainingsFromSources();
+          }, 0);
+        }
       }
+
 
       menubuttons().forEach(function(b){
         b.classList.remove('active');
