--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
     <script src="./niche/nichejavascripts/datascience.js"></script>
     <script src="./niche/projects.js"></script>
     <script src="./niche/trainings.js"></script>
+    <script src="./niche/skills.js"></script>
 
 <script>
 (function () {
