--- a/index.html
+++ b/index.html
@@ -292,7 +292,6 @@
   </div>
 
     <script src="./assets/settings.js"></script>
-    <script src="./assets/function.js"></script>
     <script src="./niche/home.js"></script>
     <script src="./niche/nichejavascripts/seocontentwriter.js"></script>
     <script src="./niche/nichejavascripts/virtualassistant.js"></script>
@@ -301,7 +300,7 @@
     <script src="./niche/trainings.js"></script>
     <script src="./niche/skills.js"></script>
 
-<!-- <script>
+<script>
 (function () {
   const menu = document.getElementById('topmenu');
   const vardetails = document.getElementById('details');
@@ -487,7 +486,7 @@
     // (optional) addhomebutton();
   }
 })();
-</script> -->
+</script>
 
 </body>
 </html>
